# satyrographos-repo

./: .gitignore  .travis.yml  README.md  ci.sh  dune-project  repo  satyrographos-repo-test-develop.opam  satyrographos-repo-test-stable-0-0-4.opam  satyrographos-repo-test-stable-0-0-5.opam  satyrographos-repo-test-stable.opam  satyrographos-repo-test.opam  snapshot-develop--1.opam  snapshot-develop.opam  snapshot-stable-0-0-10.opam  snapshot-stable-0-0-11.opam  snapshot-stable-0-0-4.opam  snapshot-stable-0-0-5.opam  snapshot-stable-0-0-6--1.opam  snapshot-stable-0-0-6--2.opam  snapshot-stable-0-0-6.opam  snapshot-stable-0-0-7--1.opam  snapshot-stable-0-0-7.opam  snapshot-stable-0-0-8.opam  snapshot-stable-0-0-9.opam  travis.sh
.github/workflows/: automatic-rebase.yaml  ci-comment.yaml  ci.yaml  pr-comment-welcome.yaml  pr-comment.yaml  pr-followup.yaml  pr.yaml  snapshot.yaml  update-develop.yaml
doc/: ci-phase1-rollout-checklist.md  ci-staged-migration-plan.md
resources/: satysfi-dist.template
scripts/: add-satysfi  take-snapshot  update-snapshot  update-snapshot-satysfi
