opam-version: "2.0"
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: [
  "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
]
homepage: "https://github.com/na4zagin3/satyrographos-repo"
dev-repo: "git+https://github.com/na4zagin3/satyrographos-repo.git"
bug-reports: "https://github.com/na4zagin3/satyrographos-repo/issues"
license: "LGPL3+"

synopsis: "Internal library to test Satyrographos Repo"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "ocaml" {>= "4.08.0"}
  "satysfi" {= "0.0.4+dev2020.06.07"}
  "satysfi-dist"
  "satyrographos" {= "0.0.2.4"}


  "satysfi-assert-eq"
  "satysfi-base"
  "satysfi-bibyfi"
  "satysfi-cancel"
  "satysfi-class-exdesign"
  "satysfi-class-exdesign-doc"
  "satysfi-class-stjarticle"
  "satysfi-class-stjarticle-doc"
  "satysfi-class-slydifi"
  "satysfi-debug-show-value"
  "satysfi-enumitem"
  "satysfi-fonts-asana-math"
  "satysfi-fonts-asana-math-doc"
  "satysfi-fonts-computer-modern-unicode"
  "satysfi-fonts-computer-modern-unicode-doc"
  "satysfi-fonts-dejavu"
  "satysfi-fonts-dejavu-doc"
  "satysfi-fonts-noto-emoji"
  "satysfi-fonts-noto-emoji-doc"
  "satysfi-fonts-noto-sans"
  "satysfi-fonts-noto-sans-doc"
  "satysfi-fonts-noto-sans-cjk-jp"
  "satysfi-fonts-noto-sans-cjk-jp-doc"
  "satysfi-fonts-noto-serif"
  "satysfi-fonts-noto-serif-doc"
  "satysfi-fonts-noto-serif-cjk-jp"
  "satysfi-fonts-noto-serif-cjk-jp-doc"
  "satysfi-fonts-theano"
  "satysfi-fonts-theano-doc"
  "satysfi-grcnum"
  "satysfi-grcnum-doc"
  "satysfi-karnaugh"
  "satysfi-karnaugh-doc"
  "satysfi-make-html"
  "satysfi-make-markdown"
  "satysfi-matrix"
  "satysfi-matrix-doc"
  "satysfi-musikui"
  "satysfi-num-conversion"
  "satysfi-simple-itemize"
  "satysfi-siunitx"
  "satysfi-uline" {="0.2.0"}
  "satysfi-zrbase"
]
