opam-version: "2.0"
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: [
  "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
]
homepage: "https://github.com/na4zagin3/satyrographos-repo"
dev-repo: "git+https://github.com/na4zagin3/satyrographos-repo.git"
bug-reports: "https://github.com/na4zagin3/satyrographos-repo/issues"
license: "LGPL3+"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
]
