opam-version: "2.0"
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: [
  "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
]
homepage: "https://github.com/na4zagin3/satyrographos-repo"
dev-repo: "git+https://github.com/na4zagin3/satyrographos-repo.git"
bug-reports: "https://github.com/na4zagin3/satyrographos-repo/issues"
license: "CC0-1.0"

synopsis: "Snapshot of stable libraries in Satyrographos Repo"

depends: [
  "dune" {build}
  "ocaml" {>= "4.06.0"}
  "satysfi" {= "0.0.4"}
  "satysfi-dist"
  "satyrographos" {= "0.0.2.4"}


# Package List

  "satysfi-assert-eq-doc" {= "0.1.2"}

  "satysfi-assert-eq" {= "0.1.2"}

  "satysfi-base" {= "1.3.0"}

  "satysfi-cancel" {= "0.0.1"}

  "satysfi-class-exdesign-doc" {= "0.2"}

  "satysfi-class-exdesign" {= "0.2"}

  "satysfi-class-slydifi" {= "0.1.0"}

  "satysfi-class-stjarticle-doc" {= "1.3.2"}

  "satysfi-class-stjarticle" {= "1.3.2"}

  "satysfi-class-yabaitech-doc" {= "0.0.3"}

  "satysfi-class-yabaitech" {= "0.0.3"}

  "satysfi-debug-show-value-doc" {= "0.1.2"}

  "satysfi-debug-show-value" {= "0.1.2"}

  "satysfi-fonts-asana-math-doc" {= "000.958+1+satysfi0.0.4"}

  "satysfi-fonts-asana-math" {= "000.958+1+satysfi0.0.4"}

  "satysfi-fonts-computer-modern-unicode-doc" {= "0.7.0+satysfi0.0.4"}

  "satysfi-fonts-computer-modern-unicode" {= "0.7.0+satysfi0.0.4"}

  "satysfi-fonts-dejavu-doc" {= "2.37+satysfi0.0.4"}

  "satysfi-fonts-dejavu" {= "2.37+satysfi0.0.4"}

  "satysfi-fonts-noto-emoji-doc" {= "1.05+uh+2"}

  "satysfi-fonts-noto-emoji" {= "1.05+uh+2"}

  "satysfi-fonts-noto-sans-cjk-jp-doc" {= "2.001+1+satysfi0.0.4"}

  "satysfi-fonts-noto-sans-cjk-jp" {= "2.001+1+satysfi0.0.4"}

  "satysfi-fonts-noto-sans-cjk-sc-doc" {= "2.001+1"}

  "satysfi-fonts-noto-sans-cjk-sc" {= "2.001+1"}

  "satysfi-fonts-noto-sans-doc" {= "2.001+1+satysfi0.0.4"}

  "satysfi-fonts-noto-sans" {= "2.001+1+satysfi0.0.4"}

  "satysfi-fonts-noto-serif-cjk-jp-doc" {= "2.001+1+satysfi0.0.4"}

  "satysfi-fonts-noto-serif-cjk-jp" {= "2.001+1+satysfi0.0.4"}

  "satysfi-fonts-noto-serif-doc" {= "2.001+1+satysfi0.0.4"}

  "satysfi-fonts-noto-serif" {= "2.001+1+satysfi0.0.4"}

  "satysfi-fonts-theano-doc" {= "2.0+satysfi0.0.3+satyrograhos0.0.2"}

  "satysfi-fonts-theano" {= "2.0+satysfi0.0.3+satyrograhos0.0.2"}

  "satysfi-grcnum-doc" {= "0.2"}

  "satysfi-grcnum" {= "0.2"}

  "satysfi-karnaugh-doc" {= "0.0.1"}

  "satysfi-karnaugh" {= "0.0.1"}

  "satysfi-lipsum-doc" {= "0.2.1"}

  "satysfi-lipsum" {= "0.2.1"}

  "satysfi-make-html-doc" {= "0.1.1"}

  "satysfi-make-html" {= "0.1.1"}

  "satysfi-make-markdown" {= "0.1.0"}

  "satysfi-matrixcd" {= "0.0.2"}

  "satysfi-matrix-doc" {= "0.0.1+dev2019.10.15"}

  "satysfi-matrix" {= "0.0.1+dev2019.10.15"}

  "satysfi-musikui-doc" {= "0.1.1"}

  "satysfi-musikui" {= "0.1.1"}

  "satysfi-ruby-doc" {= "0.1.2"}

  "satysfi-ruby" {= "0.1.2"}

  "satysfi-simple-itemize-doc" {= "1.0.2"}

  "satysfi-simple-itemize" {= "1.0.2"}

  "satysfi-siunitx-doc" {= "0.1.1"}

  "satysfi-siunitx" {= "0.1.1"}

  "satysfi-uline-doc" {= "0.2.2"}

  "satysfi-uline" {= "0.2.2"}

  "satysfi-zrbase" {= "0.4.0"}

# Package List End
]
